2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jni/jni-base.c (KaffeJNI_ParseUserProperty):
	Factored out of KaffeJNI_ParseArgs to fix compiler warning,
	and simplify code a bit. Added comments.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/intrp/machine.c
	(getEngine): ANSI-fied prototype.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(setBlockState): De-inlined to fix compiler warnings
	with gcc 3.4 on powerpc-linux.

2005-02-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* configure.ac: Setup SEMAPHORE_LIB correctly. Force enable_mips2 to
	yes if omitted.

	* m4/semaphore.m4: Use the pthread flags to check semaphore functions.

2005-02-05  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c
	(nullException): Better handling of stack overflows though we
	would need a stack switch here.
	
	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_exit): Awake the first thread and exits there.
	
	* test/regression/SystemLoaderTest.java
	(l, k): Use another name to avoid conflicts with ArrayForName.

	* test/regression/WaitTest.java: Synchronize then start the thread
	to be sure the notification is sent after the first thread is
	going into wait.

2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	Attempt to fix up the FreeeBSD x86 tinderbox build.

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_CFLAGS,
	libkaffevm_la_LDFLAGS): Added PTHREAD_CFLAGS and 
	PTHREAD_LIBS.

2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-04  Chris Burdess  <dog@gnu.org>

        * gnu/xml/aelfred2/SAXDriver.java: Corrected implementation of
        isDeclared methods. Improved performance of isSpecified methods.

2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-04  Michael Koch  <konqueror@gmx.de>

        * javax/swing/SortingFocusTraversalPolicy.java