@@ -1,5 +1,10 @@
 2005-02-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* kaffe/kaffevm/gcFuncs.c: Replaced 'index' by 'objIndex' to 
+	fix compiler warnings about shadowed symbols.
+
+2005-02-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/jni/jni-base.c (KaffeJNI_ParseUserProperty):
 	Factored out of KaffeJNI_ParseArgs to fix compiler warning,
 	and simplify code a bit. Added comments.
